Add Webpack to generate lib files per source
Why:

* This will allow us to have imports per function like Lodash.

--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "bugs": {
     "url": "https://github.com/subvisual/javascript-utils/issues"
   },
-  "homepage": "https://github.com/subvisual/javascript-utils"
+  "homepage": "https://github.com/subvisual/javascript-utils",
+  "devDependencies": {
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
+  }
 }
