Set up repo for initial release
Why:

* In order to keep the functions available for import individually, we
  need to move their output format to the root of the published package.

  To avoid polluting the repository, we then use the `dist/` directory
  where Webpack puts the build artifacts by default, and copy the
  required files in there so we can instead publish that directory
  directly.

  To avoid publishing the package from the root, `package.json` is kept
  as a private module, which is changed when the file is copied to
  `dist/`.

  This approach also has the advantage of not requiring a `.npmignore`
  file, at least for the time being, since files are explicitly copied
  to the publishing directory.

--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
+  "private": true,
   "name": "@subvisual/utils",
   "description": "Collection of reusable Javascript utilities by Subvisual",
-  "version": "0.1.0",
+  "version": "0.0.0",
+  "author": "Subvisual <contact@subvisual.com> (https://subvisual.com)",
+  "license": "ISC",
+  "main": "index.js",
+  "homepage": "https://github.com/subvisual/javascript-utils",
   "repository": {
     "type": "git",
     "url": "https://github.com/subvisual/javascript-utils.git"
   },
-  "author": "Subvisual <contact@subvisual.com> (https://subvisual.com)",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/subvisual/javascript-utils/issues"
   },
-  "homepage": "https://github.com/subvisual/javascript-utils",
   "devDependencies": {
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
+  },
+  "scripts": {
+    "build": "webpack"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
