--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "url": "https://github.com/subvisual/javascript-utils/issues"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.4",
+    "@babel/preset-env": "^7.11.0",
+    "babel-loader": "^8.1.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
   },
